// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get async data 1`] = `
<DocumentFragment>
  <div>
    <p>
      data: 
    </p>
    <p>
      loading: true
    </p>
  </div>
</DocumentFragment>
`;

exports[`get async data 2`] = `
<DocumentFragment>
  <div>
    <p>
      data: 1
    </p>
    <p>
      loading: false
    </p>
  </div>
</DocumentFragment>
`;

exports[`with debounce 1`] = `
<DocumentFragment>
  <div>
    <span>
      1
    </span>
    <span />
  </div>
</DocumentFragment>
`;

exports[`with debounce 2`] = `
<DocumentFragment>
  <div>
    <span>
      2
    </span>
    <span />
  </div>
</DocumentFragment>
`;

exports[`with debounce 3`] = `
<DocumentFragment>
  <div>
    <span>
      5
    </span>
    <span>
      5
    </span>
  </div>
</DocumentFragment>
`;
